<resources>
    <string name="app_name">I-Cat App</string>
    <string name="enter">Enter</string>
    <string name="login_background_image">Login Background Image</string>
    <string name="login_s">Login</string>
    <string name="lets_enter_to_start_learning">Let\'s enter to start learning</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="mobile_number">Mobile number</string>
    <string name="review_desc">Describe your experience (optional)</string>
    <string name="password">Password</string>
    <string name="login_c">LOGIN</string>
    <string name="forget_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="password_icon">Password Icon</string>
    <string name="icon_for_alert">Icon for alert</string>
    <string name="title">Title</string>
    <string name="sub_title_text">Sub title text</string>
    <string name="ok">OK</string>
    <string name="forget_password_">Forgot Password</string>
    <string name="enter_your_email_and_we_will_send_you_new_link_to_reset_password">Enter your email, and we will send you a new link to your email to reset your password.</string>
    <string name="email">Email</string>
    <string name="email_icon">Email Icon</string>
    <string name="login_here">Login Here</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">CANCEL</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="register_s">Register</string>
    <string name="register_c">REGISTER</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="book_image">Book Image</string>
    <string name="navigation_button">Navigation Button</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="sound_icon">Sound Icon</string>
    <string name="let_the_little_children_come_to_me_mk_10_14"><b>Let the little children come to me.</b></string>
    <string name="let_the_little_children_come_to_me_mk_10_14_tamil"><b>இயேசுவை அறிய, அனுபவிக்க, அன்பு செய்ய, அறிக்கையிட.</b></string>
    <string name="english_medium_icon">English Medium Icon</string>
    <string name="tamil_medium_icon">Tamil Medium Icon</string>
    <string name="jesus_image">Jesus Image</string>
    <string name="select_book">Select Book</string>
    <string name="select_book_tamil">நூலைத் தேர்வு செய்</string>
    <string name="coming_soon_image">Coming Soon Image</string>
    <string name="we_cant_make_you_to_wait_for_long_time">We can\'t make you wait for a long time.</string>
    <string name="stay_tuned">Stay Tuned</string>
    <string name="back">Back</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_subtitle">Kindly check your connection and try again.</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="something_went_wrong_subtitle">The Page You Requested in Not Displayed</string>
    <string name="book_details_tamil">நூல் விவரம்</string>
    <string name="malalayar_maraikalvi_tamil">மறைக்கல்வி</string>
    <string name="book_author">நூலாசிரியர்: அருள்பணி. ஜார்ஜ் சின்னப்பன் ச.ச</string>
    <string name="user_rating_tamil">பயனர் மதிப்பீடு</string>
    <string name="user_rating_english">User Rating</string>
    <string name="_3_7_5">3.7 / 5</string>
    <string name="price_tamil">விலை:</string>
    <string name="price_price">Price:</string>
    <string name="e_book_tamil">மின்னூல்</string>
    <string name="activity_tamil">செயல்பாடு</string>
    <string name="videos_tamil">காணொளிகள்</string>
    <string name="songs_tamil">பாடல்கள்</string>
    <string name="web_links_tamil">இணைய உலா</string>
    <string name="review_tamil">கருத்துகள் (2)</string>
    <string name="write_your_review">Write your review</string>
    <string name="see_all_reviews">See All Reviews</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="back_button">Back Button</string>
    <string name="activity_1_tamil">அமர்வு – 1</string>
    <string name="activity_2_tamil">அமர்வு – 2</string>
    <string name="activity_3_tamil">அமர்வு – 3</string>
    <string name="activity_4_tamil">அமர்வு – 4</string>
    <string name="activity_5_tamil">அமர்வு – 5</string>
    <string name="activity_6_tamil">அமர்வு – 6</string>
    <string name="activity_7_tamil">அமர்வு – 7</string>
    <string name="activity_8_tamil">அமர்வு – 8</string>
    <string name="activity_9_tamil">அமர்வு – 9</string>
    <string name="activity_10_tamil">அமர்வு – 10</string>
    <string name="activity_11_tamil">அமர்வு – 11</string>
    <string name="activity_12_tamil">அமர்வு – 12</string>
    <string name="activity_13_tamil">அமர்வு – 13</string>
    <string name="activity_14_tamil">அமர்வு – 14</string>
    <string name="activity_15_tamil">அமர்வு – 15</string>
    <string name="activity_16_tamil">அமர்வு – 16</string>
    <string name="activity_17_tamil">அமர்வு – 17</string>
    <string name="activity_18_tamil">அமர்வு – 18</string>
    <string name="activity_19_tamil">அமர்வு – 19</string>
    <string name="activity_20_tamil">அமர்வு – 20</string>
    <string name="activity_21_tamil">அமர்வு – 21</string>
    <string name="activity_22_tamil">அமர்வு – 22</string>
    <string name="activity_1_tamil_l">எண்கள்-1</string>
    <string name="activity_2_tamil_l">எண்கள்-2</string>
    <string name="activity_3_tamil_l">எண்கள்- 3</string>
    <string name="activity_4_tamil_l">எண்கள்- 4</string>
    <string name="activity_5_tamil_l">எண்கள்- 5</string>
    <string name="activity_6_tamil_l">எண்கள்-6</string>
    <string name="activity_7_tamil_l">எண்கள்-7</string>
    <string name="activity_8_tamil_l">எண்கள்-8</string>
    <string name="activity_9_tamil_l">எண்கள்-9</string>
    <string name="activity_10_tamil_l">எண்கள்-10</string>
    <string name="activity_1_tamil_lu">உயிரெழுத்து- அ</string>
    <string name="activity_2_tamil_lu">உயிரெழுத்து-ஆ</string>
    <string name="activity_3_tamil_lu">உயிரெழுத்து-இ</string>
    <string name="activity_4_tamil_lu">உயிரெழுத்து-ஈ</string>
    <string name="activity_5_tamil_lu">உயிரெழுத்து-உ</string>
    <string name="activity_6_tamil_lu">உயிரெழுத்து-ஊ</string>
    <string name="activity_7_tamil_lu">உயிரெழுத்து-எ</string>
    <string name="activity_8_tamil_lu">உயிரெழுத்து-ஏ</string>
    <string name="activity_9_tamil_lu">உயிரெழுத்து-ஐ</string>
    <string name="activity_10_tamil_lu">உயிரெழுத்து-ஒ</string>
    <string name="activity_11_tamil_lu">உயிரெழுத்து-ஓ</string>
    <string name="activity_12_tamil_lu">உயிரெழுத்து-ஒள</string>
    <string name="activity_1_eng">Session – 1</string>
    <string name="activity_2_eng">Session – 2</string>
    <string name="activity_3_eng">Session – 3</string>
    <string name="activity_4_eng">Session – 4</string>
    <string name="activity_5_eng">Session – 5</string>
    <string name="activity_6_eng">Session – 6</string>
    <string name="activity_7_eng">Session – 7</string>
    <string name="activity_8_eng">Session – 8</string>
    <string name="activity_9_eng">Session – 9</string>
    <string name="activity_10_eng">Session – 10</string>
    <string name="coloring_activity_tamil">வண்ணமிட்டு கொண்டாடு</string>
    <string name="maze_tamil">வழிகாட்டி வாழ்ந்திடு</string>
    <string name="choose_tamil">சரியான விடையை தேர்வுசெய்</string>
    <string name="line_connector_tamil">பொருத்தி மகிழ்ந்திடு</string>
    <string name="drag_drop_tamil">இறைவார்த்தைகளை வரிசைப்படுத்தி எழுதுக</string>
    <string name="drag_drop_tamillkgukg">விவிலியப் பெயர்களை வரிசைப்படுத்தி எழுதுக</string>
    <string name="word_search_tamil">செபத்தைத் தேடிக்கண்டுபிடி</string>
    <string name="choose_circle_image">Choose circle image</string>
    <string name="play_circle">Play Circle</string>
    <string name="video_image">Video Image</string>
    <string name="_65_00">₹ 65.00</string>
    <string name="hint_tamil">செபம்</string>
    <string name="celebrating_colouring">Celebrate Colouring</string>
    <string name="show_the_way">Show the Way</string>
    <string name="enjoy_matching">Enjoy Matching</string>
    <string name="r_word">Rearrange the Jumbled Word of God</string>
    <string name="prayer_hunt">Prayer Hunt</string>
    <string name="choose_the_correct_ans">Choose the Correct Answer</string>
    <string name="class1_info">முதல் வகுப்பு மறைக்கல்விப் பாடப்புத்தகம், திருவிவிலியத்தின் முதல் புத்தகமான தொடக்க நூலில் குறிப்பிடப்பட்டுள்ள, புகழ்பெற்ற மூதாதையர்களின் வாழ்க்கை வரலாற்றை விவரிக்கின்றது. கடவுள், தமது சாயலில் மனிதர்களை அன்போடு படைத்து, அவர்களை இரக்கத்தோடு மீட்டு, தாம் தேர்ந்துக்கொண்ட மனிதர்களை உடனிருந்து வழிநடத்திய நிகழ்வுகளை இப்புத்தகம் விளக்குகின்றது. விவிலிய மாந்தர்கள் கொண்டிருந்த இறைநம்பிக்கை, இறையச்சம், இறையுணர்வு நம்முடைய வாழ்வுக்கு வழிகாட்டும் விதமாக இப்புத்தகம் வடிவமைக்கப்பட்டிருக்கின்றது.
</string>
    <string name="class2_info">இரண்டாம் வகுப்பு மறைக்கல்விப் பாடப்புத்தகம், நீதித்தலைவர்கள், ஆட்சியாளர்கள், கடவுளின் சிறப்பு ஆசி பெற்று அவர் பணியைச் செய்தவர்கள், கடவுளின் திட்டத்திற்கேற்ப மிக வித்தியாசமாக வாழ்ந்தவர்கள் என்ற கலவையாக, ஆசிரியர், பெற்றோர், மாணவர்கள் எளிதில் புரிந்துகொள்ளும் வகையில் உருவாக்கப்பட்டிருக்கின்றது.  நம்மைப் படைத்த கடவுள், நம்மைப் பாதுகாக்கும் கடவுளாக, பராமரிக்கும் கடவுளாக, துன்ப நேரங்களில் துணை நிற்கும் கடவுளாக இருந்து வழிநடத்துகிறார் என்ற மைய சிந்தனை எல்லா அமர்வுகளிலும் இழையோடுவது இப்புத்தகத்தின் சிறப்பம்சமாகும்.</string>
    <string name="class3_info">மூன்றாம் வகுப்பு மறைக்கல்விப் பாடப்புத்தகம், இஸ்ரயேல் மற்றும் யூதா நாட்டை ஆட்சி செய்த அரசர்களை மையப்படுத்தி அமைக்கப்பட்டிருக்கின்றது. ஆண்டவராகிய கடவுள், இஸ்ரயேல் மக்களைக் கானான் தேசத்தில் குடியமர்த்திய பிறகு, நீதித் தலைவர்களின் வழியாக அவர்களை நல்வழிப்படுத்தினார். இஸ்ரயேல் மக்களின் விருப்பத்திற்கேற்ப, கடவுள் அவர்களை ஆள்வதற்கு அரசர்களைத் தேர்ந்தெடுத்து, திருநிலைப்படுத்தினார். இவ்வாறு, இறைவனால் திருநிலைப்படுத்தபட்ட அரசர்கள் கடவுளுக்கு உண்மை உள்ளவர்களாய் இருந்தபோது கடவுளின் அருளையும், அவரின் உடனிருப்பையும் பெற்று மக்களைச் சிறப்பாக வழிநடத்தினார்கள்; என்பதை இப்புத்தகம் கற்பிக்கின்றது.</string>
    <string name="class4_info">நான்காம் வகுப்பு மறைக்கல்விப் பாடப்புத்தகம், கடவுளால் தேர்ந்தெடுக்கப்பட்டு, மக்களிடம் அனுப்பப்பட்ட இறைவாக்கினர்களை மையமாகக் கொண்டது. எகிப்து நாட்டில் அடிமைகளாக வாழ்ந்த இஸ்ரயேல் மக்களை விடுவித்த கடவுள்,  அவர்களை வழிநடத்த அரசர்களைத் தேர்ந்தெடுத்தார். ஆனால், இஸ்ரயேல் மக்களும், அவர்களின் அரசர்களும் கடவுள் செய்த நன்மைகளை மறந்து, வேற்றுத் தெய்வங்களை வழிபட்டார்கள். இதைக்கண்டு வருந்திய கடவுள், இஸ்ரயேல் மக்களை நல்வழிப்படுத்தவும், தமக்கும் மக்களுக்கும் பாலமாகச் செயல்படவும், தமது வார்த்தைகளை மக்களுக்கு எடுத்துரைக்கவும், அவர்களின் தவறுகளை இடித்துரைக்கவும், எதிர்கால நிகழ்வுகளை முன்னறிவிக்கவும் இறைவாக்கினர்களைத் தேர்ந்துகொண்டார் என்பதை இப்புத்தகம் தெளிவாக விளக்குகின்றது.</string>
    <string name="class5_info">ஐந்தாம் வகுப்பு மறைக்கல்விப் பாடப்புத்தகம், கடவுளின் அருளையும், உடனிருப்பையும் பெற்றுத் தரும் அருளடையாளங்களை அடிப்படையாகக் கொண்டு உருவாக்கப்பட்டிருக்கின்றது. புதுவாழ்வை நாம் பெற்றுக்கொள்ளவும், அவ்வாழ்வில் உறுதியாக நிலைத்து நிற்கவும், நாம் சோர்வடையாமல் தொடர்ந்து அப்புதுவாழ்வில் பயணம் செய்யவும் நமக்கு  கொடையாகக் கொடுக்கப்பட்டவையே அருளடையாளங்கள் என்பதை இப்புத்தகம் விளக்குகின்றது. அருளடையாளங்களின் அவசியம், பயன்கள், பண்புகள் ஆகியவற்றை மிகச் சுருக்கமாகவும், தெளிவாகவும், புரிந்துகொள்வதற்கு எளிமையாகவும் கொடுக்கப்பட்டிருப்பது இப்புத்தகத்தின் கூடுதல் சிறப்பு. </string>
    <string name="class1_eng_info">“God Who Creates, Saves and Guides” focuses on the famous patriarchs mentioned in the book of Genesis. This book is carefully and beautifully designed in such a way that it helps all the three target groups – Teachers, Parents and Students. Only eight sessions are given for easy learning and assimilation of the topics. The traditional concept of Lessons has been replaced by Sessions. The uniqueness of this book is that all the eight sessions are meticulously prepared with a special  focus on the Holy Bible.
</string>
</resources>