<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.maria.pastelhub.login.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/login"
                android:scaleType="fitXY"
                android:contentDescription="@string/login_background_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MainHeader"
                    android:text="@string/login_s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MainSubHeader"
                    android:text="@string/lets_enter_to_start_learning" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    style="@style/EditTextStyle"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/contact"
                        style="@style/IconImage"
                        android:contentDescription="@string/contact_icon" />

                    <EditText
                        android:id="@+id/mobile_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:background="@color/transparent_color"
                        android:inputType="number"
                        android:layout_marginEnd="@dimen/ten"
                        android:layout_marginRight="@dimen/ten"
                        android:importantForAutofill="no"
                        android:hint="@string/mobile_number"
                        app:addTextChangedListener="@{viewModel.getMobileNumberTextWatcher}"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    style="@style/EditTextStyle"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/password"
                        style="@style/IconImage"
                        android:contentDescription="@string/password_icon" />

                    <EditText
                        android:id="@+id/password_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:background="@color/transparent_color"
                        android:inputType="textPassword"
                        android:layout_marginEnd="@dimen/ten"
                        android:layout_marginRight="@dimen/ten"
                        android:importantForAutofill="no"
                        android:hint="@string/password"
                        app:addTextChangedListener="@{viewModel.getPasswordTextWatcher}"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    style="@style/ButtonStyle"
                    android:text="@string/login_c"
                    android:onClick="@{viewModel::onLoginClicked}"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/header_text"
                    android:layout_marginEnd="@dimen/header_text"
                    android:layout_marginBottom="@dimen/twenty_five"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password"
                        android:textColor="@color/colorPrimary"
                        android:onClick="forgetClicked"
                        style="@style/TextNonLink" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:onClick="registerClicked"
                        style="@style/TextLink" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>