<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.maria.pastelhub.forgetpassword.viewmodel.ForgetViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".forgetpassword.ForgetPassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/login"
                android:scaleType="fitXY"
                android:contentDescription="@string/login_background_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MainHeader"
                    android:text="@string/forget_password_" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MainSubHeader"
                    android:text="@string/enter_your_email_and_we_will_send_you_new_link_to_reset_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    style="@style/EditTextStyle"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/mail"
                        style="@style/IconImage"
                        android:contentDescription="@string/email_icon" />

                    <EditText
                        android:id="@+id/mail_forget"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:background="@color/transparent_color"
                        android:inputType="textEmailAddress"
                        android:layout_marginEnd="@dimen/ten"
                        android:layout_marginRight="@dimen/ten"
                        android:importantForAutofill="no"
                        android:hint="@string/email"
                        app:addTextChangedListener="@{viewModel.getEmailTextWatcher}"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <Button
                    android:id="@+id/forget_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    style="@style/ButtonStyle"
                    android:text="@string/confirm"
                    android:onClick="@{viewModel::onForgetClick}"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/header_text"
                    android:layout_marginEnd="@dimen/header_text"
                    android:visibility="invisible"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_here"
                        android:onClick="loginClicked"
                        style="@style/TextNonLink" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:onClick="registerClicked"
                        style="@style/TextLink" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>