<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".emptystatus.EmptyStatus">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coming_soon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/coming_soon_image" />

        <TextView
            android:id="@+id/empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="23sp"
            android:layout_marginTop="@dimen/button_text_size"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            android:text="@string/stay_tuned" />

        <TextView
            android:id="@+id/empty_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="27sp"
            android:layout_marginTop="@dimen/button_text_size"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/we_cant_make_you_to_wait_for_long_time" />

        <androidx.cardview.widget.CardView
            android:id="@+id/load_back"
            android:layout_width="@dimen/hundred"
            android:layout_height="@dimen/fifty"
            app:cardCornerRadius="@dimen/fifty"
            android:layout_margin="@dimen/button_text_size">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/back" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>