<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/three"
    android:background="@color/transparent_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/four"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="35sp"
        app:layout_editor_absoluteY="162sp"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_icon_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            app:cardElevation="@dimen/text_size"
            app:cardCornerRadius="@dimen/fifty">

            <ImageView
                android:id="@+id/alert_icon_exit"
                android:layout_width="@dimen/forty"
                android:layout_height="@dimen/forty"
                android:layout_margin="@dimen/twenty_five"
                android:contentDescription="@string/icon_for_alert"
                android:src="@drawable/exit" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_content_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fifty"
            android:layout_marginStart="@dimen/twenty_five"
            android:layout_marginEnd="@dimen/twenty_five"
            app:cardCornerRadius="@dimen/twenty_five"
            app:cardElevation="@dimen/ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fifty"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_alert_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MainHeader"
                    android:text="@string/title"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/sixty" />

                <TextView
                    android:id="@+id/subtitle_alert_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AlertSubHeader"
                    android:text="@string/sub_title_text"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/button_text_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/exit_red"
                        android:textColor="@color/white"
                        android:textSize="@dimen/button_text_size"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/okButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:background="@color/exit_green"
                        android:textSize="@dimen/button_text_size"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/ok" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>